add env to gh action

--- a/.github/workflows/cd.yml
+++ b/.github/workflows/cd.yml
@@ -79,4 +79,7 @@ jobs:
         run: yarn export
 
       - name: Deploy application
+        env:
+          SURGE_LOGIN: ${{ secrets.SURGE_LOGIN }}
+          SURGE_TOKEN: ${{ secrets.SURGE_TOKEN }}
         run: surge out uiuc.hack4impact.org
